--- a/css/main.css
+++ b/css/main.css
@@ -20,10 +20,10 @@ body {
 }
 
 .ipad-container {
-  height: 880px;
   max-height: 100%;
-  width: 640px;
   max-width: 100%;
+  height: 860px;
+  width: 640px;
   border: double 3px transparent;
   border-radius: 25px;
   background-image: linear-gradient(black, black), radial-gradient(circle at center, #a399b2,#444,#a399b2, #444);
@@ -53,7 +53,7 @@ body {
 }
 
 .cell {
-  flex: 0 0 auto;
+  flex: 0 1 auto;
   border: 1px solid #a399b2;
   position: relative;
   z-index: 1;
@@ -90,13 +90,73 @@ body {
   bottom: -80px;
   height: 80px;
   width: 100%;
-  background: linear-gradient(to right, #1a252f, #2c3e50);
+  background: linear-gradient(to bottom, #1a252f, #2c3e50);
   z-index: 2;
-  pointer-events: none;
   transition: all 0.2s;
-  opacity: 0.8 ;
+  pointer-events: none;
 }
 
 .ipad-screen-menu--active {
   bottom: 0;
+}
+
+.ipad-screen-menu__list {
+  list-style: none;
+  margin: 0;
+  padding: 5px 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.ipad-screen-menu__item {
+  height: 100%;
+}
+
+.ipad-screen-menu__btn {
+  height: 100%;
+  width: 64px;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 75%;
+  opacity: 1;
+  pointer-events: all;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+
+.ipad-screen-menu__btn:active {
+  background-color: #2c3e50;
+}
+
+.ipad-screen-menu__btn--eraser {
+  background-image: url(../img/001-eraser.svg);
+}
+
+.ipad-screen-menu__btn--palette {
+  background-image: url(../img/002-palette.svg);
+}
+
+.ipad-screen-menu__btn--grid {
+  background-image: url(../img/003-grid.svg);
+}
+
+.ipad-screen-menu__btn--die {
+  background-image: url(../img/004-die.svg);
+}
+
+.color-picker {
+  position: absolute;
+  z-index: 10;
+  display: none;
+}
+
+.color-picker--visible {
+  display: block;
 }
