--- a/css/main.css
+++ b/css/main.css
@@ -146,7 +146,7 @@ body {
   transition: background-color 0.2s;
 }
 
-.ipad-screen-menu__btn:active {
+.ipad-screen-menu__btn:active, .ipad-screen-menu__btn--active {
   background-color: #2c3e50;
 }
 
